--- a/c_project_01/code/css/main_page/a_base.css
+++ b/c_project_01/code/css/main_page/a_base.css
@@ -1,13 +1,18 @@
 /* main_page/a_base.css */
 
 @media screen {
+/* ====================================================== */
+/* #wrap 
+   ====================================================== */
   #wrap {
-    width:100%; 
-    min-width:320px;
-    height:auto; min-height:1000px;
-    margin:auto; padding-top:0;
-  }
-/* #headBox __________________________________________ */
+      width:100%; 
+      min-width:320px;
+      height:auto; min-height:1000px;
+      margin:auto; padding-top:0;
+    }
+  
+/* #headBox 
+   ====================================================== */
   #headBox { 
     position: fixed; top: 0; left:0; z-index:1500;
     width: 100%; height: auto; 
@@ -18,58 +23,66 @@
   }
   #headBox > * {display: none;}
 
-/* #slideBox __________________________________________ */
-#slideBox   { 
-  position: relative;
-  width: 100%; height:100vh;
-  box-sizing: border-box;
-  background-color: #afd; }
+/* #slideBox 
+    ====================================================== */
+  #slideBox   { 
+    position: relative;
+    width: 100%; height:100vh;
+    box-sizing: border-box;
+    background-color: #afd; }
 
-/* #newBox ____________________________________________  */
-#newBox { 
-  position: relative;
-  width: 100%; 
-  /* padding-top:62px; */ 
-  box-sizing: border-box;
-  background-color: #edd; 
-}
+/* #newBox 
+    ======================================================  */
+  #newBox { 
+    position: relative;
+    width: 100%; 
+    /* padding-top:62px; */ 
+    box-sizing: border-box;
+    background-color: #edd; 
+  }
 
-/* #subBox ____________________________________________  */
-#subBox     { 
-  position: relative;
-  width: 100%; 
-  box-sizing: border-box;
-  /* padding-top:50px;  */
-  /* background-color: #aaa;  */
-  background-color: #ffbd55; 
-}
 
-/* #bestBox ____________________________________________  */
-#bestBox { 
-  width: 100%;
-  padding-top:175px; box-sizing: border-box; 
-  background-color: #fff;
-}
+/* #subBox 
+    ======================================================  */
+  #subBox     { 
+    position: relative;
+    width: 100%; 
+    box-sizing: border-box;
+    /* padding-top:50px;  */
+    /* background-color: #aaa;  */
+    background-color: #ffbd55; 
+  }
 
-/* #galleryBox ____________________________________________  */
-#galleryBox {   
-  width: 100%; height: 750px; 
-  padding-top: 75px; box-sizing: border-box;
-  background-color: rgba(255, 189, 85, 0.2);
-}
+/* #bestBox 
+    ======================================================  */
+  #bestBox { 
+    width: 100%;
+    padding-top:175px; box-sizing: border-box; 
+    background-color: #fff;
+  }
 
-/* #sponsorBox ____________________________________________  */
-#sponsorBox { 
-  width: 100%; height: 100px; 
-  /* padding:10px 0; box-sizing: border-box; */
-  background-color: #999; 
-}
+/* #galleryBox 
+    ======================================================  */
+  #galleryBox {   
+    width: 100%; height: 750px; 
+    padding-top: 75px; box-sizing: border-box;
+    background-color: rgba(255, 189, 85, 0.2);
+  }
 
-/* #footBox ____________________________________________  */
-#footBox    { 
-  width: 100%; 
-  padding-top: 68px; box-sizing: border-box;
-  background-color: #333; 
-}
+/* #sponsorBox 
+    ======================================================  */
+  #sponsorBox { 
+    width: 100%; height: 100px; 
+    /* padding:10px 0; box-sizing: border-box; */
+    background-color: #999; 
+  }
+
+/* #footBox 
+    ======================================================  */
+  #footBox    { 
+    width: 100%; 
+    padding-top: 68px; box-sizing: border-box;
+    background-color: #333; 
+  }
 
 } /* @media screen */
