--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -3,46 +3,54 @@
 @media screen and (min-width:600px) and (max-width:1023px) {
   /* 기준 디바이스 크기 : 600px  */
   body {background-color: #fee;}
-  /* #wrap { } */
+/* #wrap { } */
 
-/* #headBox __________________________________________ */
-#headBox { height: 3.125rem; padding:0.5rem 1.0625rem; }
-#headBox > * {display: none;}
+/* #headBox 
+  ============================================ */
+  #headBox { height: 3.125rem; padding:0.5rem 1.0625rem; }
+  #headBox > * {display: none;}
 
-/* #slideBox __________________________________________ */
-#slideBox   { 
+/* #slideBox 
+  ============================================ */
+  #slideBox   { 
   min-height:25rem; 
   padding-top: 3.125rem;
-}
+  }
 
-/* #newBox ____________________________________________  */
-#newBox { 
+/* #newBox 
+  ============================================  */
+  #newBox { 
   height:100vh; min-height:43.75rem;   
   padding-top: 3.75rem; padding-bottom: 5.625rem;
-}
+  }
 
-/* #subBox ____________________________________________  */
-#subBox { height:37.5rem; }
+/* #subBox 
+  ============================================  */
+  #subBox { height:37.5rem; }
 
-/* #bestBox ____________________________________________  */
-#bestBox { 
+/* #bestBox 
+  ============================================  */
+  #bestBox { 
   height:100vh; min-height: 37.5rem; 
   padding: 3.75rem 3.125rem; padding-bottom: 5.9375rem;
-}
+  }
 
-/* #galleryBox ____________________________________________  */
-#galleryBox {   
+/* #galleryBox 
+  ============================================  */
+  #galleryBox {   
   height: 61.25rem;
   padding-top: 7.75rem; padding-bottom: 7.5rem;
-}
+  }
 
-/* #sponsorBox ____________________________________________  */
-#sponsorBox { 
+/* #sponsorBox 
+  ============================================  */
+  #sponsorBox { 
   height: 18.75rem;
-}
+  }
 
-/* #footBox ____________________________________________  */
-#footBox    { height: 26.5625rem; }
+/* #footBox 
+  ============================================  */
+  #footBox    { height: 26.5625rem; }
 
 
 }/* @media screen and (min-width:600px) and (max-width:1023px) */
