--- a/c_project_01/code/css/main_page/d_laptop.css
+++ b/c_project_01/code/css/main_page/d_laptop.css
@@ -4,45 +4,58 @@
   /* 기준 디바이스 크기 : 1024px  */
   body {background-color: #efe;}
 
-  /* #wrap {  } */
-/* #headBox __________________________________________ */
+/* #wrap
+   =================================================== */
+   /* #wrap {  }  */
+   
+/* #headBox 
+   =================================================== */
 #headBox {height: 6.25rem; padding:1.25rem 2.5rem 0.625rem;}
 #headBox > * {display: none;}
 
-/* #slideBox __________________________________________ */
+/* #slideBox 
+   =================================================== */
 #slideBox   { 
   min-height: 37.5rem; 
   padding-top: 6.25rem;
 }
 
-/* #newBox ____________________________________________  */
+/* #newBox 
+   =================================================== */
 #newBox { 
   height:43.75rem; 
   padding-top: 4.0625rem; padding-bottom: 4.375rem;
 }
+.area_title { width:940px; }
 
-/* #subBox ____________________________________________  */
+
+/* #subBox 
+   =================================================== */
 #subBox { 
   height: 21.875rem; 
   padding-top: 10.5rem; padding-bottom: 9.5rem; padding-left:2.5rem;
 }
 
-/* #bestBox ____________________________________________  */
+/* #bestBox 
+   =================================================== */
 #bestBox { 
   height: 43.75rem; 
   padding-top: 10.9375rem; padding-bottom: 9.0625rem;
 }
 
-/* #galleryBox ____________________________________________  */
+/* #galleryBox 
+   =================================================== */
 #galleryBox {
   height: 46.875rem; 
   padding-top: 5rem; padding-bottom: 8.125rem;
 }
 
-/* #sponsorBox ____________________________________________  */
+/* #sponsorBox 
+   =================================================== */
 #sponsorBox { height: 6.25rem; }
 
-/* #footBox ____________________________________________  */
+/* #footBox 
+   =================================================== */
 #footBox    { height: 28.125rem;}
 
 }/* @media screen and (min-width:1024px) and (max-width:1439px) */
