newBox영역 반응형 코드

--- a/c_project_01/code/css/common/common.css
+++ b/c_project_01/code/css/common/common.css
@@ -24,3 +24,8 @@
 .blind_area button>span ,
 .blind {  display:block; position: absolute; z-index:-1; width:0; height:0; overflow: hidden; }
 
+/* layout */
+.area_content{
+  width:940px; height:370px; 
+  margin:48px auto 0;
+} 
