--- a/c_project_01/code/css/main_page/a_base.css
+++ b/c_project_01/code/css/main_page/a_base.css
@@ -36,10 +36,51 @@
   #newBox { 
     position: relative;
     width: 100%; 
-    /* padding-top:62px; */ 
     box-sizing: border-box;
-    background-color: #edd; 
+    overflow-X: hidden;
   }
+  .area_title{
+    width:100%; height:4.375rem; 
+    margin:auto; padding-top: 0.625rem; box-sizing: border-box;
+    font-size:2.5rem;  
+  }
+
+  .area_indicator{
+    position: absolute; bottom:4.375rem; left:0; right:0;
+    width:8.75rem; height:1.875rem; 
+    margin:auto;
+  }
+  
+  .area_indicator ul { width: 100%; height: 100%; }
+
+  .area_indicator li { 
+    float:left; width: 1.875rem; height: 1.875rem; 
+    margin-left:1.5625rem;
+  }
+
+  .area_indicator a {
+    border-radius:100%;
+    background-color: #c4c4c4;
+    box-sizing: border-box;
+  }
+
+  .area_indicator li.act a {background-color: #1A5D54;}
+  .area_indicator li a:focus { border:2px solid rgba(23, 23, 23, 1); outline:0; }
+  .area_indicator li a:hover { background-color:rgba(85, 85, 85, 0.3);}
+
+  .newBox_area{
+    width:940px; height:370px; 
+    overflow: hidden;
+    margin:0; margin-top:48px;
+    position: relative; left: 50%; transform:translateX(-50%);
+  }
+
+  .newBox_area ul { width: 200%; height:auto;}
+  .newBox_area li { float:left; width:300px; height:370px; margin-left:20px;}
+
+  .newBox_area li:nth-child(1) a {background-image: url("../../img/main_page/new_product_01.png");}
+  .newBox_area li:nth-child(2) a {background-image: url("../../img/main_page/new_product_02.png");}
+  .newBox_area li:nth-child(3) a {background-image: url("../../img/main_page/new_product_03.png");}
 
 
 /* #subBox 
