--- a/c_project_01/code/css/main_page/e_pc.css
+++ b/c_project_01/code/css/main_page/e_pc.css
@@ -28,7 +28,7 @@
     height:43.75rem;
     padding-top: 4.0625rem; padding-bottom: 4.375rem;
   }
-  .area_title { width:940px; }
+  .area_title { width:58.75rem; }
 
 /* #subBox 
     ==========================================  */
