--- a/c_project_01/code/css/main_page/a_base.css
+++ b/c_project_01/code/css/main_page/a_base.css
@@ -94,6 +94,52 @@
     background-color: #ffbd55; 
   }
 
+  #subBox > .area {
+    position: absolute; bottom: 0; left:0; right:0;
+    height: 300px; margin:auto;
+    /* background-color: #ddd; */
+    }
+
+  .sub_area {
+    position: absolute; 
+    bottom:50px; 
+    height:auto;
+    /* background-color: #0cc; */
+  }
+
+  .sub_area h2 {
+    width: 100%; height: 60px; 
+    margin-bottom: 15px;
+    font-size: 40px; color:#333; line-height: 60px;
+    text-transform: capitalize;}
+  .sub_area p {
+    width: 100%; height:auto;
+    margin-bottom: 25px;
+    font-size: 18px;
+    color:#505050;
+  }
+  .sub_area_btn {  width: 100%; height: 45px; }
+  .sub_area_btn a {
+    float:left; height: 100%; 
+    border-radius:8px; 
+    font-size:22px; text-align: center; line-height:45px;
+  }
+  .sub_area_btn a:nth-child(1) {
+    width: 160px; margin-right: 30px;
+    color:#fff; 
+    background-color: #1A5D54; }
+  .sub_area_btn a:nth-child(2) {
+    width: 110px; color:#1A5D54;
+    background-color: #fff;
+  }
+
+
+  .sub_area_img {
+    background-repeat: no-repeat;
+    background-position: 50% 50%;
+    background-size: cover;
+  }
+  
 /* #bestBox 
     ======================================================  */
   #bestBox { 
