--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -36,7 +36,23 @@
 
 /* #subBox 
     ====================================================  */
-  #subBox { height:100vh; min-height: 31.25rem; }
+  #subBox { height:100vh; min-height: 31.25rem; background-color: #fff; }
+  #subBox > .area { width: 100%; min-width:auto; height:100%; }
+  .sub_area { z-index:100; left:50%; bottom:25%; width: 90%; transform:translateX(-50%); }
+
+  .sub_area p { min-height:80px; margin-bottom:35px; }
+  .sub_area_btn {height:auto;}
+  .sub_area_btn a {display:block; float:none;  margin-bottom: 14px; }
+  .sub_area_btn a:nth-child(1){
+    width:100%; height:60px; 
+    line-height:60px; font-weight: 700;}
+  .sub_area_btn a:nth-child(2){width:100%; height:45px;}
+
+  .sub_area_img {
+    width: 100%; height:100%;
+    background-image:url("../../img/main_page_re/mobile/e_subBox/sub_img.png");
+    opacity: 0.3;
+  }
 
 /* #bestBox 
     ====================================================  */
