--- a/c_project_01/code/css/main_page/e_pc.css
+++ b/c_project_01/code/css/main_page/e_pc.css
@@ -33,7 +33,15 @@
 /* #subBox 
     ==========================================  */
   #subBox { height: 21.875rem; }
-
+  
+  .sub_area { right: 70px; width: 400px; }
+  .sub_area_img {
+    float:left;
+    width: 28.75rem; height: 18.75rem;
+    transform:translateY(-1.5625rem);
+    background-image: url("../../img/main_page_re/desktop/e_subBox/sub_img.png");
+    box-shadow:1.875rem 1.5625rem 0 #EFEFEF;
+  }
 /* #bestBox 
     ==========================================  */
   #bestBox { 
