--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -10,7 +10,35 @@
 /* #headBox 
    ==================================================== */
   #headBox { height: 3.125rem; padding:0.5rem 0.625rem; }
-  #headBox > * {display: none;}
+ 
+  .area_head {height: 100%;}
+  #logo {
+    float:none;
+    position: absolute; top:8px; left:50%;
+    width: 60px; height: 35px;
+    transform:translateX(-50%);
+  }
+
+  .nav_btn {
+    display:block; 
+    position: relative; z-index:100; 
+    width:35px; height:35px; }
+
+  #navBox {
+    position: absolute; top: 0; left: 0; width: 100%; height:100vh;
+    padding-top:8px;
+    background-color: rgba(26, 93, 84, 1);
+  }
+  #navBox h2 { 
+    position: relative; z-index:100;
+    width: 60px; height: 35px; 
+    margin:auto; margin-bottom: 30px;
+    background-image: url("../../img/headBox/navBox/logo_white.png");
+    background-image: url("../../img/headBox/navBox/logo_white.svg");
+    background-repeat: no-repeat; background-position: 50% 50%;
+    background-size: contain;
+  }
+  .unb, .gnb {float:none; }
 
 /* #slideBox 
     ==================================================== */
@@ -18,6 +46,7 @@
     min-height:31.25rem; 
     padding-top: 3.125rem;
   }
+
 
 /* #newBox 
     ====================================================  */
