--- a/c_project_01/code/css/main_page/a_base.css
+++ b/c_project_01/code/css/main_page/a_base.css
@@ -25,7 +25,6 @@
   .area_head {
     width: 100%; max-width:1440px; height: auto;
     margin:auto;
-    background-color: #faff;
   }
 
   #logo { float:left; }
@@ -85,10 +84,10 @@
       padding:0 7px; border-right:1px solid #aaa;
       text-align: center;
     }
-    .gnb li:last-child {border:0; padding-right: 0;}
-    .gnb li:first-child {padding-left: 0;}
+    /* .gnb li:last-child {border:0; padding-right: 0;} */
+    /* .gnb li:first-child {padding-left: 0;} */
     
-    .gnb li a {
+    .gnb a {
       padding:5px 10px;
       line-height: 25px;
       font-size:1rem; color:#171717;
