--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -26,7 +26,7 @@
 
   #navBox {
     position: absolute; top: 0; left: 0; width: 100%; height:100vh;
-    padding-top:8px;
+    padding:8px 30px; box-sizing: border-box;
     background-color: rgba(26, 93, 84, 1);
   }
   #navBox h2 { 
@@ -38,7 +38,21 @@
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: contain;
   }
-  .unb, .gnb {float:none; }
+  .unb, .gnb {float:none; width:100%; min-width:auto; height:auto;}
+  .gnb ul {float:none; width: 100%; height:auto; }
+  .gnb li {
+    float:none; width:100%; height:50px;
+    margin-bottom:15px; padding: 0;
+  }
+  
+  .unb a { color:#fff;} 
+  .gnb a { 
+    display: block; width: 100%; height: 100%; 
+    padding: 0;  border:1px solid #fff; 
+    border-radius: 5px;
+    line-height:50px; color:#fff;
+  }
+
 
 /* #slideBox 
     ==================================================== */
