--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -18,8 +18,8 @@
   
   #navBox {
     position: absolute; top: 0; left: 0; width: 100%; height:100vh;
-    padding:8px 17px;
-    background-color: rgba(26, 93, 84, 1);
+    padding:8px 80px; box-sizing: border-box;
+    background-color: rgba(131, 76, 51, 1);
   }
   #navBox h2 { 
     position: relative; z-index:100;
@@ -30,7 +30,21 @@
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: contain;
   }
-  .unb, .gnb {float:none;}
+  .unb, .gnb {float:none; width:100%; min-width:auto; height:auto; }
+  .gnb ul {float:none; width: 100%; height:auto; }
+  .gnb li {
+    width:32%; height:60px;
+    margin-right:2%; margin-bottom:20px; padding:0; border:0;
+  }
+  .gnb li:nth-child(3n) { margin-right: 0; }
+
+
+  .unb a {color:#fff;}
+  .gnb a {
+    display: block; width: 100%; height:100%;
+    padding: 0; border:1px solid #fff; 
+    border-radius: 5px;
+    color:#fff; line-height: 60px;}
   
 
 
