실습예제_반응형웹페이지 navBox영역 unb

--- a/c_project_01/code/css/main_page/a_base.css
+++ b/c_project_01/code/css/main_page/a_base.css
@@ -93,6 +93,7 @@
       font-size:1rem; color:#171717;
       font-weight: 700;
       text-transform:capitalize;
+      word-spacing:-0.3125rem;
     }
 
 /* #slideBox 
