--- a/c_project_01/code/css/main_page/d_laptop.css
+++ b/c_project_01/code/css/main_page/d_laptop.css
@@ -1,7 +1,7 @@
 /* main_page/d_laptop.css */
 
-@media screen and (min-width:1024px) and (max-width:1439px) {
-  /* 기준 디바이스 크기 : 1024px  */
+@media screen and (min-width:64rem) and (max-width:89.9375rem) {
+  /* 기준 디바이스 크기 : 64rem  */
   body {background-color: #efe;}
 
 /* #wrap
@@ -11,7 +11,7 @@
 /* #headBox 
    =================================================== */
 #headBox {height: 6.25rem; padding:1.25rem 2.5rem 0.625rem;}
-#logo { width: 120px;height: 70px; }
+#logo { width: 7.5rem;height: 4.375rem; }
 
 /* #slideBox 
    =================================================== */
@@ -36,7 +36,7 @@
   padding-top: 10.5rem; padding-bottom: 9.5rem; padding-left:2.5rem;
 }
 
-.sub_area { right: 70px; width: 400px; }
+.sub_area { right: 4.375rem; width: 25rem; }
 
 .sub_area_img {
    float:left;
@@ -69,5 +69,5 @@
    =================================================== */
 #footBox    { height: 28.125rem;}
 
-}/* @media screen and (min-width:1024px) and (max-width:1439px) */
+}/* @media screen and (min-width:64rem) and (max-width:89.9375rem) */
 
