--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -1,7 +1,7 @@
 /* main_page/b_smartphone.css */
 
-@media screen and (max-width:599px) {
-  /* 기준 디바이스 크기 : 320px  */
+@media screen and (max-width:37.4375rem) {
+  /* 기준 디바이스 크기 : 20rem  */
   body {background-color: #eee;}
   
 /* #wrap { }
@@ -14,43 +14,66 @@
   .area_head {height: 100%;}
   #logo {
     float:none;
-    position: absolute; top:8px; left:50%;
-    width: 60px; height: 35px;
+    position: absolute; top:0.5rem; left:50%;
+    width: 3.75rem; height: 2.1875rem;
     transform:translateX(-50%);
   }
 
   .nav_btn {
     display:block; 
     position: relative; z-index:100; 
-    width:35px; height:35px; }
+    width:2.1875rem; height:2.1875rem; }
 
   #navBox {
-    position: absolute; top: 0; left: 0; width: 100%; height:100vh;
-    padding:8px 30px; box-sizing: border-box;
-    background-color: rgba(26, 93, 84, 1);
+    position: absolute; top: 0; left: 0; z-index:10;
+    width: 100%; height:100vh;
+    padding:0.5rem 1.875rem; box-sizing: border-box;
+    background-image: url("../../img/headBox/navBox/smartophone_nav_origin.png");
+    background-size: cover;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
   }
+  #navBox:before,
+  #navBox::before {
+    content:""; display: block; 
+    position: absolute; top: 0; left: 0; z-index: -1;
+    width: 100%; height: 100%;
+    background-color:rgba(26, 93, 84, 1);
+    opacity:0.85;
+  }
+
   #navBox h2 { 
     position: relative; z-index:100;
-    width: 60px; height: 35px; 
-    margin:auto; margin-bottom: 30px;
+    width: 3.75rem; height: 2.1875rem; 
+    margin:auto; margin-bottom: 1.875rem;
     background-image: url("../../img/headBox/navBox/logo_white.png");
     background-image: url("../../img/headBox/navBox/logo_white.svg");
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: contain;
   }
   .unb, .gnb {float:none; width:100%; min-width:auto; height:auto;}
+  .unb {width:80%; margin:auto; margin-bottom:16px; border-bottom:1px solid #fff;}
+  .unb li {
+    float:left; width:calc(50% - 10px); height:auto; 
+    margin:0; margin-bottom:0.625rem;}
+  .unb li:nth-child(1) {float:left;}
+  .unb li:nth-child(2n) {float:right;}
+  .unb a {
+    height:1.875rem; 
+    line-height:1.875rem; font-size: 1rem;}
+
   .gnb ul {float:none; width: 100%; height:auto; }
   .gnb li {
-    float:none; width:100%; height:50px;
-    margin-bottom:15px; padding: 0;
-  }
+    float:none; width:100%; height:3.125rem;
+    margin-bottom:0.9375rem; padding: 0;  }
   
   .unb a { color:#fff;} 
   .gnb a { 
     display: block; width: 100%; height: 100%; 
-    padding: 0;  border:1px solid #fff; 
-    border-radius: 5px;
-    line-height:50px; color:#fff;
+    padding: 0;  border:0.0625rem solid #fff; 
+    border-radius: 0.3125rem;
+    line-height:3.125rem; color:#fff;  
+    font-size: 18px; font-weight: 400;
   }
 
 
@@ -83,13 +106,13 @@
   #subBox > .area { width: 100%; min-width:auto; height:100%; }
   .sub_area { z-index:100; left:50%; bottom:25%; width: 90%; transform:translateX(-50%); }
 
-  .sub_area p { min-height:80px; margin-bottom:35px; }
+  .sub_area p { min-height:5rem; margin-bottom:2.1875rem; }
   .sub_area_btn {height:auto;}
-  .sub_area_btn a {display:block; float:none;  margin-bottom: 14px; }
+  .sub_area_btn a {display:block; float:none;  margin-bottom: 0.875rem; }
   .sub_area_btn a:nth-child(1){
-    width:100%; height:60px; 
-    line-height:60px; font-weight: 700;}
-  .sub_area_btn a:nth-child(2){width:100%; height:45px;}
+    width:100%; height:3.75rem; 
+    line-height:3.75rem; font-weight: 700;}
+  .sub_area_btn a:nth-child(2){width:100%; height:2.8125rem;}
 
   .sub_area_img {
     width: 100%; height:100%;
@@ -127,4 +150,4 @@
   #footBox > * {display: none;}
 
 /* =========================================== */
-} /* @media screen and (max-width:599px) */
+} /* @media screen and (max-width:37.4375rem) */
