--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -1,7 +1,7 @@
 /* main_page/c_tablet.css */
 
-@media screen and (min-width:600px) and (max-width:1023px) {
-  /* 기준 디바이스 크기 : 600px  */
+@media screen and (min-width:37.5rem) and (max-width:63.9375rem) {
+  /* 기준 디바이스 크기 : 37.5rem  */
   body {background-color: #fee;}
 /* #wrap { } */
 
@@ -9,42 +9,63 @@
   ============================================ */
   #headBox { height: 3.125rem; padding:0.5rem 1.0625rem; }
   .area_head {height: 100%;}
-  #logo { width: 60px; height: 35px; }
+  #logo { width: 3.75rem; height: 2.1875rem; }
 
   .nav_btn {
     display:block; float:right;
     position: relative; z-index:100;  
-    width:35px; height:35px;}
+    width:2.1875rem; height:2.1875rem;}
   
   #navBox {
-    position: absolute; top: 0; left: 0; width: 100%; height:100vh;
-    padding:8px 80px; box-sizing: border-box;
-    background-color: rgba(131, 76, 51, 1);
+    position: absolute; top: 0; left: 0; z-index:10;
+    width: 100%; height:100vh;
+    padding:0.5rem 5rem; box-sizing: border-box;    
+    background-image: url("../../img/headBox/navBox/smartophone_nav_origin.png");
+    background-size: cover;
+    background-position: 50% 100%;
+    background-repeat: no-repeat;
   }
+  #navBox:before,
+  #navBox::before {
+    content:""; display: block; 
+    position: absolute; top: 0; left: 0; z-index: -1;
+    width: 100%; height: 100%;    
+    background-image: linear-gradient(rgba(131, 76, 51, 1) 50%, transparent);
+    opacity:0.9;
+  }
+
   #navBox h2 { 
     position: relative; z-index:100;
-    width: 60px; height: 35px; 
-    margin-bottom: 30px;
+    width: 3.75rem; height: 2.1875rem; 
+    margin-bottom: 1.875rem;
     background-image: url("../../img/headBox/navBox/logo_white.png");
     background-image: url("../../img/headBox/navBox/logo_white.svg");
     background-repeat: no-repeat; background-position: 50% 50%;
     background-size: contain;
   }
   .unb, .gnb {float:none; width:100%; min-width:auto; height:auto; }
+  .unb {margin-bottom:1rem; padding-bottom:0.5rem; border-bottom:0.0625rem solid #fff;}
+  .unb li {
+    float:left; 
+    width:calc(100% / 4); height:1.25rem; 
+    margin:0; padding:0 0.3125rem; box-sizing: border-box;}
+  .unb a {color:#fff; font-size: 1rem;}
+
   .gnb ul {float:none; width: 100%; height:auto; }
   .gnb li {
-    width:32%; height:60px;
-    margin-right:2%; margin-bottom:20px; padding:0; border:0;
+    width:32%; height:3.75rem;
+    margin-right:2%; margin-bottom:1.25rem; padding:0; border:0;
   }
   .gnb li:nth-child(3n) { margin-right: 0; }
 
 
-  .unb a {color:#fff;}
   .gnb a {
     display: block; width: 100%; height:100%;
-    padding: 0; border:1px solid #fff; 
-    border-radius: 5px;
-    color:#fff; line-height: 60px;}
+    padding: 0; border:0.0625rem solid #fff; 
+    border-radius: 0.3125rem;
+    color:#fff; line-height: 3.75rem;
+    font-size: 1.125rem; font-weight: 400;
+  }
   
 
 
@@ -77,11 +98,11 @@
   #subBox > .area { width: 100%; min-width:auto; height:100%; }
   .sub_area {
     z-index:100; left:50%;  bottom:15%; 
-    width:500px; 
+    width:31.25rem; 
     transform:translateX(-50%);
   }
   .sub_area_btn a:nth-child(1) {
-    width: 250px; }
+    width: 15.625rem; }
 
   .sub_area_img {
     width: 100%; height:100%;
@@ -119,5 +140,5 @@
   #footBox    { height: 26.5625rem; }
 
 
-}/* @media screen and (min-width:600px) and (max-width:1023px) */
+}/* @media screen and (min-width:37.5rem) and (max-width:63.9375rem) */
 
