--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -2,7 +2,7 @@
 
 @media screen and (max-width:37.4375rem) {
   /* 기준 디바이스 크기 : 20rem  */
-  body {background-color: #eee;}
+  
   
 /* #wrap { }
    ====================================================*/
@@ -25,6 +25,7 @@
     width:2.1875rem; height:2.1875rem; }
 
   #navBox {
+    display: none;
     position: absolute; top: 0; left: 0; z-index:10;
     width: 100%; height:100vh;
     padding:0.5rem 1.875rem; box-sizing: border-box;
