--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -2,8 +2,7 @@
 
 @media screen and (min-width:37.5rem) and (max-width:63.9375rem) {
   /* 기준 디바이스 크기 : 37.5rem  */
-  body {background-color: #fee;}
-/* #wrap { } */
+
 
 /* #headBox 
   ============================================ */
@@ -17,6 +16,7 @@
     width:2.1875rem; height:2.1875rem;}
   
   #navBox {
+    display: none;
     position: absolute; top: 0; left: 0; z-index:10;
     width: 100%; height:100vh;
     padding:0.5rem 5rem; box-sizing: border-box;    
