--- a/c_project_01/code/css/main_page/d_laptop.css
+++ b/c_project_01/code/css/main_page/d_laptop.css
@@ -15,10 +15,15 @@
 
 /* #slideBox 
    =================================================== */
-#slideBox   { 
-  min-height: 37.5rem; 
-  padding-top: 6.25rem;
-}
+   #slideBox   { 
+      min-height: 37.5rem; 
+      padding-top: 6.25rem;
+    }
+    
+    .slide_btn button{
+      transform: translateY(-50%);
+    }
+    
 
 /* #newBox 
    =================================================== */
