--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -72,9 +72,36 @@
 /* #slideBox 
   ============================================ */
   #slideBox   { 
-  min-height:25rem; 
-  padding-top: 3.125rem;
+    min-height:25rem; 
+    max-height:75rem;
+    padding-top: 3.125rem;
   }
+  
+    /* ---------- */
+    .slide_btn { 
+      position: absolute; top: 0; bottom:auto; z-index: 1000;
+      width:100%; min-width: auto; height:0;
+      margin:auto;
+    }
+    .slide_btn button{ 
+      width:3.125rem; height:100vh; max-height:75rem;
+      background-image: none;
+      background-repeat: no-repeat;   
+      background-color: rgba(0,0,0,0.5);
+      }
+    .slide_area {padding: 0; background-image: none;}
+    .slide_content { 
+      position: relative;
+      width: 100%; height: 100%; 
+      margin:auto; }
+    .slide_content_part {
+      left:50%; transform:translate(-50%);
+    }
+    .slide_img_part {
+      width: 100%; height: 100%;
+    }
+    .slide_01 { background-size: cover; background-position: 50% 100%;}
+  
 
 /* #newBox 
   ============================================  */
