일부 공통요소 수정

--- a/b_step_04/css/common/common.css
+++ b/b_step_04/css/common/common.css
@@ -22,7 +22,7 @@
 .code_exam h1 {
   width: 100%; height: auto;
   padding-top: 20px; padding-bottom:10px;
-  font-size:35px; font-weight:900;
+  font-size :2rem; font-weight:900;
   text-align: center;
 }
 .code_exam h1 > a {color:#05a;}
@@ -62,6 +62,7 @@
     margin:0; margin-bottom: 10px;
     padding-bottom: 5px;  box-sizing: inherit;
     border-bottom: 1px solid #ccc;}
-.code_exam a {
-    display: inline-block; border: none;
+.part a {
+     border: none;
+    width:auto; height:auto;
     color:#555; text-decoration: none;}
