--- a/b_step_04/css/common/reset.css
+++ b/b_step_04/css/common/reset.css
@@ -5,14 +5,14 @@
   --color-red :#FC7676;
 }
 body { 
-  margin: 0; line-height:100%;
+  margin: 0; line-height:1.2;
   /* font-family: sans-serif; */
   font-family: 'Noto Sans KR', sans-serif;
 }
 
 h1,h2,h3,h4,h5,h6,p,pre,q,blockquote,ul,ol,li,dl,dt,dd,img { 
-  margin: 0; padding: 0; border:0;
-  font-size:100%;  font:inherit;
+  margin:0; padding: 0; border:0;
+  font-size:100%;  font-family:inherit;
   vertical-align: baseline;
 }
 
