--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -141,30 +141,98 @@
 /* #bestBox 
   ============================================  */
   #bestBox { 
-  height:100vh; min-height: 37.5rem; 
-  padding: 3.75rem 3.125rem; padding-bottom: 5.9375rem;
+    position: relative;
+    height:auto; min-height: 37.5rem; 
+    padding: 3.75rem 3.125rem; 
+    padding-bottom: 13.75rem;
   }
+  
+  #bestBox .area {  width: 500px; min-width: auto; height:auto; }
+  .best_area {
+    float:none; 
+    width: 100%; height: auto; margin-bottom: 54px;}
+  .best_area h2{height: auto;}
+  .best_area p{height: auto;}
+  
+  .best_btn { display: none;}
+  .more_btn {
+    position: absolute; bottom:90px; left: 50%; 
+    width: 140px;
+    transform: translateX(-50%);
+  }
+  .best_card_list { float:none; width: 100%; height: auto;}
+  .best_card_list ul {width: 100%;}
+  .best_card_list li { margin:0; margin-bottom:60px; }
+  .best_card_list li:nth-child(2n+1) {  float:left; }
+  .best_card_list li:nth-child(2n) {  float:right; }
+  .best_card_list li:nth-child(n+5) { display:none; }
+  
 
 /* #galleryBox 
   ============================================  */
   #galleryBox {   
-  height: 61.25rem;
-  padding-top: 7.75rem; padding-bottom: 7.5rem;
+    height: 61.25rem;
+    padding-top: 7.75rem; padding-bottom: 7.5rem;
   }
-
-  #galleryBox .area_content {
+  #galleryBox .area_title { text-align: center; }
+  #galleryBox  .area_content {
     width: 100%;
   }
+  .gallery_main_content  {
+    float:none; margin:auto;
+    margin-bottom: 20px;
+  } 
+  #galleryBox   .gallery_list {
+    float:none; position: static;
+    width: 460px; height: auto;
+    margin:auto;
+  }
+  
+  .gallery_list li {
+    float:left; width: 45%;
+  }
+  .gallery_list li:nth-child(2n) { float:right; }
+  .gallery_list button { padding: 0; }
 
 /* #sponsorBox 
   ============================================  */
   #sponsorBox { 
-  height: 18.75rem;
+    padding-top: 10px;
+    height: 300px;
+    box-sizing: border-box;
   }
+  #sponsorBox h2 {
+    position: static;
+    width: 100%; height: auto; 
+    margin-bottom: 20px; padding-top: 10px;
+    font-size:28px; font-weight: 700;
+    text-align: center;
+  }
+  
+  .sponsor_area {
+    overflow: hidden;
+    width: 460px; height:200px;   
+    padding:0 10px;
+  }
+  .sponsor_area ul {
+    width:100%; height: auto; 
+  }
+  .sponsor_area li {
+    float:left; width: 140px; height: 80px; 
+    padding:10px 0; 
+    margin-right:20px;
+  }
+  .sponsor_area li:nth-child(3n){margin-right: 0;}
 
 /* #footBox 
   ============================================  */
-  #footBox    { height: 26.5625rem; }
+  #footBox    { 
+    height: 26.5625rem; padding:16px;
+  }
+  .area_foot {position: relative;}
+  .social_family {position: absolute; top: 0; right: 0;}
+  .social { margin-bottom: 10px;}
+  .authentication {display: none;}
 
 
 }/* @media screen and (min-width:37.5rem) and (max-width:63.9375rem) */
