--- a/c_project_01/code/css/main_page/d_laptop.css
+++ b/c_project_01/code/css/main_page/d_laptop.css
@@ -54,10 +54,11 @@
 
 /* #bestBox 
    =================================================== */
-#bestBox { 
-  height: 43.75rem; 
-  padding-top: 10.9375rem; padding-bottom: 9.0625rem;
-}
+   #bestBox { 
+      height: 43.75rem; 
+      padding: 10.9375rem 3.125rem 9.0625rem;  
+      overflow-x: hidden;
+    }
 
 /* #galleryBox 
    =================================================== */
@@ -68,7 +69,20 @@
 
 /* #sponsorBox 
    =================================================== */
-#sponsorBox { height: 6.25rem; }
+   #sponsorBox { height: auto; }
+   .sponsor_area {
+     overflow: hidden;
+     width: 940px; height:100px;   
+     padding:0 10px;
+   }
+   .sponsor_area ul {
+     width:200%; height: 100%; 
+   }
+   .sponsor_area li {
+     float:left; width: 140px; height: 80px; 
+     padding:10px 0; 
+     margin-right:20px;
+   }
 
 /* #footBox 
    =================================================== */
