실무예제 jQuery - 아코디언 메뉴 설정

--- a/b_step_04/css/src/b_07_accordion.css
+++ b/b_step_04/css/src/b_07_accordion.css
@@ -57,3 +57,50 @@
   background-color: #fee;
 }
 .accor dd:last-of-type{ border: 0;}
+
+.accor dl i { transition:all 300ms linear; }
+.accor dl.on i { transform: rotate(180deg); }
+
+/* -------------------------------------------------------- */
+
+.accor2 {
+  width: 100%; height: auto;
+  margin:auto; margin-top: 2rem;
+  background-color: #fff;
+}
+
+.accor2 > ul { 
+  width: 100%; height: auto;
+}
+.accor2 li {
+  width: 100%; height:auto;
+  margin-bottom:1rem;
+  /* border:1px solid #777; */
+}
+
+.nav_title {
+  width: 100%; height: auto;
+  padding:0.5rem; box-sizing: border-box;
+}
+.nav_title button {
+  width: 100%; height:auto;
+  padding: 0.3rem; 
+  border-radius:0.1rem;
+  border-bottom:1px solid #333;
+  font-weight: 700;
+  text-indent:1rem;
+  text-align-last: left;
+  background-color: #fff;
+}
+
+
+.sub_list {
+  display: none;
+  width: 100%; height: auto;
+  padding: 0.5rem; box-sizing: border-box;
+}
+.sub_list a {
+  padding: 0.2rem 0.5rem;
+  border-radius:0.1rem;
+  background-color: #fdd;
+}
