--- a/b_step_04/css/src/b_08_gallery.css
+++ b/b_step_04/css/src/b_08_gallery.css
@@ -1,6 +1,7 @@
 /* b_08_gallery.css */
 
-.gallery_area {
+.gallery_area, 
+.gallery_area2 {
   width: 100%; height:auto; 
   /* background-color: #eee; */
 }
@@ -38,6 +39,7 @@
   width: 100%; height:40px;
   border-radius:5px;
   background-color: #aff; 
+  overflow: hidden;
 }
 
 .gallery_list button:hover { 
@@ -46,4 +48,10 @@
   box-shadow: 0.2rem 0.2rem 0.2rem #171717;}
 .gallery_list li.on button { 
   border:2px solid #f07; font-weight: 700;
+}
+
+/* ----------------------------------------- */
+.gallery_area2 li img {
+  width: 105%; height:auto; 
+  transform:translate(-2%, -1.25rem);
 }
