--- a/b_step_04/css/src/b_09_modal.css
+++ b/b_step_04/css/src/b_09_modal.css
@@ -26,6 +26,7 @@
 }
 /* ----------------------------- */
 .modal_window {
+  /* display: none; */
   position: fixed; top: 0; left: 0;
   z-index: 2000;
   width: 100%; height: 100%; 
@@ -65,7 +66,10 @@
 
 .modal_content {
   width: 100%; height: 100%;
-  background-color: #ddd;
+  background-image: url("../../img/album/view/car.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+  background-size: cover;
 }
 .modal_bg {
   width: 100%; height: 100%; 
