--- a/b_step_04/css/src/b_09_modal.css
+++ b/b_step_04/css/src/b_09_modal.css
@@ -26,7 +26,7 @@
 }
 /* ----------------------------- */
 .modal_window {
-  /* display: none; */
+  display: none;
   position: fixed; top: 0; left: 0;
   z-index: 2000;
   width: 100%; height: 100%; 
