--- a/b_step_05/css/src/b_02_slide_position_indicator.css
+++ b/b_step_05/css/src/b_02_slide_position_indicator.css
@@ -11,7 +11,7 @@ h3 { text-align: center; margin-bottom: 20px;}
 
 .position_slide {position: relative; width: 100%; height: 100%;}
 .position_slide > div{display:none; position: absolute; top: 0; left: 0; width: 100%;  height:450px; }
-.position_slide > div.action { display: block; z-index:100; }
+.position_slide > div.action { /* display: block; */ z-index:100; }
 
 /* ------------------------------------------------------------------------- */
 .indicator { 
