--- a/b_step_05/css/src/b_02_slide_horizontal_indicator.css
+++ b/b_step_05/css/src/b_02_slide_horizontal_indicator.css
@@ -12,7 +12,13 @@ h3 { text-align: center; margin-bottom: 20px;}
 
 .horizontal_slide {position: relative; width:500%; width:calc(100% * var(--slide-len)); height: 100%;}
 .horizontal_slide > div{float:left; width:20%; width: calc(100% / var(--slide-len));  height:450px; }
-
+/* ------------------------------------------------------------------------- */
+.slide_btn {
+  position: absolute; top: 50%; left: 0; width:100%; height:0; 
+  padding:0 30px; font-size: 8px; box-sizing:border-box; }
+.slide_btn button {width:40px; height:40px; background-color: #ccc; border-radius:10px;}
+.next { float:right; }
+.prev { float:left; }
 /* ------------------------------------------------------------------------- */
 .indicator { 
   position: absolute; z-index:200; bottom:15px; left:0; 
@@ -24,6 +30,8 @@ h3 { text-align: center; margin-bottom: 20px;}
   background-color: #fff; 
   transform:translateY(-100%);
 }
+
+/* ------------------------------------------------------------------------------ */
 
 .indicator li{display:inline-block; width:30px; height:30px; margin-right:30px; margin-bottom: 0; padding:0; border-bottom:0;}
 .indicator li:last-child{margin-right:0; }
