--- a/b_step_05/css/src/b_04_slide_hofizontal_btn_v2.css
+++ b/b_step_05/css/src/b_04_slide_hofizontal_btn_v2.css
@@ -1,7 +1,7 @@
 /* b_04_slide_hofizontal_btn_v2.css */
 
 .code_exam { width:1300px; height:2000px; }
-.ex_wrap { position: relative; }
+.ex_wrap { position: relative;}
 h3 { text-align: center; margin-bottom: 20px;}
 
 /* ---------------------------------------------------------------------- */
@@ -14,7 +14,7 @@ h3 { text-align: center; margin-bottom: 20px;}
 .horizontal_slide > div{float:left; width:20%; width: calc(100% / var(--slide-len));  height:450px; }
 /* ------------------------------------------------------------------------- */
 .slide_btn {
-  position: absolute; top: 50%; left: 0; width:100%; height:0; 
+  position: absolute; top: 50%; left: 0; z-index:200; width:100%; height:0; 
   padding:0 30px; font-size: 8px; box-sizing:border-box; }
 .slide_btn button {width:40px; height:40px; background-color: #ccc; border-radius:10px;}
 .next { float:right; }
