--- a/b_step_05/css/src/b_04_slide_hofizontal_btn_v3.css
+++ b/b_step_05/css/src/b_04_slide_hofizontal_btn_v3.css
@@ -3,6 +3,9 @@
 .code_exam { width:1300px; height:2000px; }
 .ex_wrap { position: relative;}
 h3 { text-align: center; margin-bottom: 20px;}
+.code_exam  .part {
+  padding-bottom:200px;
+}
 
 /* ---------------------------------------------------------------------- */
 .slide {
