--- a/c_project_01/code/css/src/importTest.css
+++ b/c_project_01/code/css/src/importTest.css
@@ -10,7 +10,9 @@
   width: 95%; height:31.25vw; min-height:37.5rem; max-height:56.25rem;
   margin:auto; }
 
+  .slide {width: 100%; height: 100%;}
 
+/* .slide_btn */
 .slide_btn {
   position: absolute; top: 50%; left: 0; z-index:120;
   width: 100%; height: 0;
@@ -34,9 +36,47 @@
   background-color: var(--primary_01);
 }
 
+/* .slide_indicator */
+.slide_check_part {
+  position:absolute; right: 1rem; bottom: 1rem; z-index:150;
+  width:auto; height:2.5rem; border-radius:4rem;
+  padding:0.5rem; box-sizing: border-box;
+  background-color: #fff;
+  background-color: var(--white);
 
-.slide {width: 100%; height: 100%;}
+}
 
+.slide_indicator {
+  float:left; width:auto; height:100%;
+  margin-right:20px;
+}
+.slide_indicator li{
+  float:left; width:1.5rem; height:1.5rem;
+  margin-right:2rem;
+}
+.slide_indicator li a{
+  background-color: #ccc;
+  background-color: var(--light_gray_01);
+  border-radius:2rem;
+}
+.slide_indicator li.action { width:5rem; }
+.slide_indicator li.action a { 
+  background-color:rgba(26,93,84,1);
+  background-color:var(--primary_01);
+}
+
+.slide_check_part p{
+  float:left; width:3.125rem; height:100%;  line-height:1.5rem;
+}
+.now_view{ font-weight: 700; }
+.total_view {
+  font-weight: 500; 
+  color:rgba(26, 93, 84, 1);
+  color:var(--primary_01);
+}
+
+
+/* .slide_wrapper */
 .slide_wrapper {
   position: relative; z-index:100;
   width: 100%; height: 100%; background-color: #acf;
