--- a/c_project_01/code/css/src/importTest.css
+++ b/c_project_01/code/css/src/importTest.css
@@ -59,6 +59,17 @@
   background-color: var(--light_gray_01);
   border-radius:2rem;
 }
+.slide_indicator li a:hover{
+  box-shadow:0.2rem 0.2rem 0.2rem rgba(80, 80, 80, 1);
+  box-shadow:0.2rem 0.2rem 0.2rem var(--deep_gray);
+}
+.slide_indicator li a:focus{
+  outline:2px solid rgba(131, 76, 51, 1);
+  outline:2px solid var(--primary_02);
+  box-shadow:0.2rem 0.2rem 0.2rem rgba(80, 80, 80, 1);
+  box-shadow:0.2rem 0.2rem 0.2rem var(--deep_gray);
+}
+
 .slide_indicator li.action { width:5rem; }
 .slide_indicator li.action a { 
   background-color:rgba(26,93,84,1);
@@ -83,12 +94,20 @@
 }
 
 .view_cover {
-  display: none;
-  position: absolute; top: 0; left: 0;
+  /* display: none; */
+  position: absolute; top: 0; left: 0; z-index:1;
   width: 100%; height: 100%; 
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
+}
+.view_cover:before {
+  content:""; display: block; 
+  position:absolute; top: 0; left: 0; z-index: -1;
+  width: 100%; height: 100%;
+  background-color: #fff;
+  background-color: var(--white);
+  opacity:0.7;
 }
 
 .view_cover.action { display: block; z-index:10;}
