jquery 분리된 html문서 불러와서 처리

--- a/b_step_06/css/src/b_01_importHtml.css
+++ b/b_step_06/css/src/b_01_importHtml.css
@@ -7,7 +7,7 @@
 }
 
 #box_01{  background-color: #4448AD; }
-#box_02{  background-color: #F82BFF; }
+#box_02{  background-color: #F82BFF77; }
 #box_03{  background-color: #491871; }
 
 h3 {
