반응형구축을위한 js틀세팅

--- a/c_project_01/code/css/main_page/b_smartphone.css
+++ b/c_project_01/code/css/main_page/b_smartphone.css
@@ -1,6 +1,6 @@
 /* main_page/b_smartphone.css */
 
-@media screen and (max-width:37.4375rem) {
+@media screen and (max-width:599px) {
   /* 기준 디바이스 크기 : 20rem  */
   
   
