임시 - slide 기능 처리

--- a/c_project_01/code/css/main_page/a_base.css
+++ b/c_project_01/code/css/main_page/a_base.css
@@ -100,12 +100,12 @@ body{overflow-x: hidden;}
 
 /* #slideBox 
     ====================================================== */
-    #slideBox   { 
+    .slide_set   { 
       position: relative;
       width: 100%; height:100vh; max-height:56.25rem;
       box-sizing: border-box;
       background-color: #afd; }
-    
+    .slide{width: 100%; height: 100%;}
       /* ---------- */
     .slide_btn {
       position: absolute; top: 0; bottom: 0; left:0; right:0; z-index: 100;
@@ -123,21 +123,28 @@ body{overflow-x: hidden;}
       
     .slide_btn .next {float:right; background-position: -2px -2px;}
     .slide_btn .prev {float:left; background-position: -76px -2px;}
-    
+    .slide_check_part{display: none;}
     /* ---------- */
-    .slide_area {
+    .slide_area, .slide_wrapper, .view_cover   {
       position: relative;
       width: 100%; height: 100%; 
-      background-image: url("../../img/main_page/slideBox/slide_01_bg.png");
+      /* background-image: url("../../img/main_page/slideBox/slide_01_bg.png"); */
       background-repeat: no-repeat; background-position: 50% 50%; background-size: cover;
     }
-    .slide_content { 
+    .slide_content{ 
       position: absolute; top: 50%; left: 50%;
       width: 780px; height: 400px; 
       margin:auto; box-sizing: border-box;
       transform: translate(-50%, -50%);
       /* background-color: #ddd; */
       }
+    .view_con_wrapper{
+      position: absolute; top: 0; left: 0; bottom: 0; right: 0; margin:auto;
+      width: 50%; height: 60%;
+    }
+    .view_cover{position: absolute; z-index:1;}
+    .view_cover.action{z-index:10;}
+
       .slide_content_part {
         position: absolute; top: 0; bottom: 0; left: 0;
         width:300px; height: 264px;
