--- a/c_project_01/code/css/main_page/c_tablet.css
+++ b/c_project_01/code/css/main_page/c_tablet.css
@@ -71,7 +71,7 @@
 
 /* #slideBox 
   ============================================ */
-  #slideBox   { 
+  .slide_set   { 
     min-height:25rem; 
     max-height:75rem;
     padding-top: 3.125rem;
