--- a/c_project_01/code/css/main_page/d_laptop.css
+++ b/c_project_01/code/css/main_page/d_laptop.css
@@ -7,7 +7,7 @@
 /* #wrap
    =================================================== */
 
-   
+  
 /* #headBox 
    =================================================== */
 #headBox {height: 6.25rem; padding:1.25rem 2.5rem 0.625rem;}
@@ -15,7 +15,7 @@
 
 /* #slideBox 
    =================================================== */
-   #slideBox   { 
+  .slide_set   { 
       min-height: 37.5rem; 
       padding-top: 6.25rem;
     }
